# infra-controller

api/pkg/api/handler/: machineinstancetype.go
cli/tui/: cache.go  commands.go  commands_test.go  repl.go  session.go
crates/api-core/src/tests/: site_explorer.rs
crates/api-model/src/: hardware_info.rs
crates/api/src/: lib.rs  setup.rs
crates/api/src/tests/power_shelf_state_controller/: error_state.rs  maintenance.rs  mod.rs
crates/api/src/tests/switch_state_controller/: mod.rs
crates/rpc/proto/: machine_discovery.proto
crates/rpc/src/model/: hardware_info.rs
crates/site-explorer/: Cargo.toml
crates/site-explorer/tests/: env.rs  power_shelf.rs  reconcile.rs  site_explorer.rs
docs/: index.yml
docs/manuals/networking/: bgp_peering.md
flow/: Makefile
flow/internal/nicoapi/: grpc.go  tweak_protodefs.sh
flow/internal/nicoapi/nicoproto/: common.proto  fmds.proto  health.proto  machine_discovery.proto  mlx_device.proto  nico.proto  site_explorer.proto
flow/pkg/common/firmwarecomponents/: firmwarecomponents.go
rest-api/: Makefile
rest-api/api/pkg/api/handler/: expectedmachine.go  expectedmachine_test.go
rest-api/api/pkg/api/model/: machine.go
rest-api/db/pkg/db/model/: sshkeygroupsiteassociation.go  sshkeygroupsiteassociation_test.go
rest-api/deploy/kind/: cluster-config.yaml
rest-api/deploy/kind/certs.d/docker.io/: hosts.toml
rest-api/deploy/kind/certs.d/gcr.io/: hosts.toml
rest-api/deploy/kustomize/base/site-agent/: configmap.yaml  statefulset.yaml
rest-api/flow/internal/nicoapi/nicoproto/: machine_discovery.proto
rest-api/helm/charts/nico-rest-site-agent/: values.yaml
rest-api/helm/charts/nico-rest-site-agent/templates/: statefulset.yaml
rest-api/scripts/: setup-local.sh
rest-api/site-workflow/pkg/grpc/client/: testing.go
rest-api/site-workflow/pkg/grpc/mockdata/: discovery_info.go
rest-api/site-workflow/pkg/grpc/server/: nico_test_server.go
rest-api/workflow-schema/flow/protobuf/v1/: flow_grpc.pb.go
rest-api/workflow-schema/site-agent/workflows/v1/: machine_discovery_nico.proto
rest-api/workflow/pkg/activity/sshkeygroup/: sshkeygroup.go
(+7 files in other folders)
